# annot-render

./: LICENSE  README.md  annot-render.cabal
app/: Main.hs
src/: Config.hs  LatexSnippets.hs  ParseGroup.hs  Renderer.hs
src/Text/Diff/Parse/: Internal.hs  Types.hs
